# routes/index.js
@@ -1,9 +1,11 @@
 const express = require('express');
 const router = express.Router();
 const cars = require('./cars');
+const buyers = require('./buyers');
 
 router.use['/',require('./swagger')]
 router.use('/cars', cars);
+router.use('/buyers',buyers)
 router.use(
     '/',
     (docData = (req, res) =>{
@@ -15,5 +17,6 @@ router.use(
 )
 
 router.use('/cars', require('./cars'));
+router.use('/buyers',require('./buyers'))
 
 module.exports = router;
